Correctly display whitespace within messages

--- a/imports/modules/core/components/message.css
+++ b/imports/modules/core/components/message.css
@@ -16,4 +16,6 @@
   margin-top: 4px;
   margin-bottom: 4px;
   font-size: 15px;
+  white-space: pre-wrap;
+  word-wrap: break-word;
 }
